--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mini-css-extract-plugin": "^0.9.0",
     "npm-run-all": "^4.1.5",
     "postcss-cli": "^6.1.3",
+    "postcss-loader": "^3.0.0",
     "url-loader": "^4.1.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
@@ -41,5 +42,13 @@
     "sass": "^1.26.9",
     "sass-loader": "^9.0.1",
     "style-loader": "^1.2.1"
-  }
+  },
+  "browserslist": [
+    "defaults",
+    "not ie < 11",
+    "last 4 versions",
+    "> 1%",
+    "iOS 7",
+    "last 4 iOS versions"
+  ]
 }
