--- a/package.json
+++ b/package.json
@@ -8,40 +8,42 @@
     "compile:sass": "node-sass sass/main.scss css/style.comp.css",
     "compress:css": "node-sass css/style.prefix.css css/style.css --output-style compressed",
     "build": "webpack",
-    "start:dev": "webpack-dev-server"
+    "start": "webpack serve"
   },
   "author": "flare",
   "license": "ISC",
   "devDependencies": {
+    "@babel/cli": "^7.14.8",
     "@babel/core": "^7.9.6",
     "@babel/preset-env": "^7.9.6",
     "autoprefixer": "^9.7.3",
     "babel-loader": "^8.1.0",
     "concat": "^1.0.3",
     "copy-webpack-plugin": "^6.0.1",
-    "file-loader": "^6.0.0",
-    "html-loader": "^1.1.0",
-    "mini-css-extract-plugin": "^0.9.0",
+    "core-js": "^2.6.12",
+    "file-loader": "^6.2.0",
+    "html-loader": "^2.1.2",
+    "html-webpack-plugin": "^5.3.2",
     "npm-run-all": "^4.1.5",
     "postcss-cli": "^6.1.3",
     "postcss-loader": "^3.0.0",
-    "url-loader": "^4.1.0",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.11.0"
+    "sass": "^1.38.2",
+    "sass-loader": "^12.1.0",
+    "style-loader": "^3.2.1",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.51.1",
+    "webpack-cli": "^4.8.0",
+    "webpack-dev-server": "^4.0.0"
   },
   "dependencies": {
     "@babel/polyfill": "^7.10.1",
     "animejs": "^3.2.0",
-    "axios": "^0.19.2",
-    "css-loader": "^3.6.0",
+    "axios": "^0.21.1",
+    "css-loader": "^6.2.0",
     "es6-promise-promise": "^1.0.0",
-    "html-webpack-plugin": "^4.3.0",
     "intersection-observer": "^0.10.0",
-    "object-fit-videos": "^1.0.4",
-    "sass": "^1.26.9",
-    "sass-loader": "^9.0.1",
-    "style-loader": "^1.2.1"
+    "mini-css-extract-plugin": "^2.2.0",
+    "object-fit-videos": "^1.0.4"
   },
   "browserslist": [
     "defaults",
