--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "1.0.0",
   "description": "e-commerce website",
   "main": "index.js",
+  "homepage": "https://flare-s.github.io/security-code",
   "scripts": {
     "watch:sass": "sass  src/scss/style.scss src/css/style.css",
     "compile:sass": "node-sass sass/main.scss css/style.comp.css",
     "compress:css": "node-sass css/style.prefix.css css/style.css --output-style compressed",
     "build": "webpack",
-    "start": "webpack serve"
+    "start": "webpack serve",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "author": "flare",
   "license": "ISC",
@@ -41,6 +44,7 @@
     "axios": "^0.21.1",
     "css-loader": "^6.2.0",
     "es6-promise-promise": "^1.0.0",
+    "gh-pages": "^3.2.3",
     "intersection-observer": "^0.10.0",
     "mini-css-extract-plugin": "^2.2.0",
     "object-fit-videos": "^1.0.4"
